crates/swc_ecma_parser/tests/test262-error-references/fail/f639cd9b998df512.js.stderr
error: Unexpected token `)`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/f639cd9b998df512.js:1:15
  |
1 | function t(...) { }
  |               ^

